--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             background: linear-gradient(135deg, var(--accent-color) 0%, color-mix(in srgb, var(--accent-color) 90%, black) 100%);
             color: var(--accent-text-color);
             padding: var(--space-sm) var(--space-lg);
-            z-index: var(--z-disclaimer);
+            z-index: 10000 !important;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -834,8 +834,93 @@
             color: var(--group-box-text);
         }
 
-        /* ===== MOBILE OPTIMIZATION ===== */
+        /* ===== COMPREHENSIVE MOBILE OPTIMIZATION - NATIVE APP EXPERIENCE ===== */
         @media (max-width: 768px) {
+            /* TASK 1: RESPONSIVE WIZARD CARD - THE CORE FIX */
+            #wizard-container {
+                width: 90vw !important;
+                max-width: 500px !important;
+                height: 85vh !important;
+                max-height: 700px !important;
+            }
+
+            #wizard-container > section {
+                overflow-y: auto;
+                padding: 24px;
+                max-height: none;
+            }
+
+            /* TASK 2: ADAPTIVE TYPOGRAPHY & SPACING - MOBILE-FIRST HIERARCHY */
+            
+            /* Hero Section Typography */
+            .hero-title {
+                font-size: var(--text-3xl);
+                margin-bottom: 16px;
+                line-height: 1.2;
+            }
+
+            .hero-subtitle {
+                font-size: var(--text-base);
+                margin-bottom: 24px;
+                line-height: 1.5;
+            }
+
+            /* Content Section Typography */
+            .content-section h2 {
+                font-size: var(--text-2xl);
+                margin-bottom: 16px;
+                line-height: 1.3;
+            }
+
+            .content-section p {
+                font-size: var(--text-base);
+                margin-bottom: 16px;
+                line-height: 1.6;
+            }
+
+            .content-section li {
+                font-size: var(--text-base);
+                margin-bottom: 8px;
+                line-height: 1.5;
+            }
+
+            /* Spacing Optimization */
+            .content-section {
+                padding: 20px;
+                margin: 12px;
+            }
+
+            .info-box {
+                padding: 16px;
+                margin: 16px 0;
+                font-size: var(--text-sm);
+            }
+
+            .note-block {
+                padding: 16px;
+                margin: 16px 0;
+                font-size: var(--text-sm);
+            }
+
+            .content-section ol,
+            .content-section ul {
+                margin-bottom: 16px;
+                padding-left: 20px;
+            }
+
+            /* Footer Section Mobile Optimization */
+            .completion-content h2 {
+                font-size: var(--text-3xl);
+                margin-bottom: 16px;
+            }
+
+            .contact-info {
+                margin-top: 24px;
+                padding: 16px;
+                font-size: var(--text-sm);
+            }
+
+            /* Header Optimization */
             .fixed-header {
                 padding: 12px 16px;
             }
@@ -845,53 +930,120 @@
                 gap: 8px;
             }
 
-            .main-container {
-                /* NEUTRALIZED: Mobile layout interference removed */
+            .logo {
+                font-size: var(--text-lg);
             }
 
-            #wizard-container > section {
-                padding: var(--space-2xl) var(--space-md);
+            .brand-label {
+                font-size: var(--text-xs);
             }
 
-            .hero-title {
-                font-size: var(--text-3xl);
-            }
-
-            .hero-subtitle {
-                font-size: var(--text-base);
-            }
-
+            /* Navigation Bar Mobile Optimization */
             .wizard-navigation {
-                padding: var(--space-lg) var(--space-md);
+                padding: 16px 12px;
             }
 
             .nav-btn {
-                min-width: 100px;
-                padding: var(--space-md) var(--space-lg);
-                font-size: var(--text-base);
+                min-width: 80px;
+                padding: 12px 16px;
+                font-size: var(--text-sm);
+                min-height: 44px;
             }
 
+            .progress-indicator {
+                font-size: var(--text-xs);
+                min-width: 100px;
+            }
+
+            /* Welcome Screen Mobile Optimization */
             .welcome-content {
-                padding: var(--space-4xl) var(--space-lg);
+                padding: 32px 20px;
                 max-width: 95%;
             }
 
             .welcome-title {
                 font-size: var(--text-3xl);
+                margin-bottom: 12px;
+            }
+
+            .welcome-subtitle {
+                font-size: var(--text-base);
+                margin-bottom: 32px;
+            }
+
+            .section-title {
+                font-size: var(--text-lg);
+                margin-bottom: 16px;
             }
 
             .theme-toggle-container {
                 flex-direction: column;
-                gap: var(--space-xs);
+                gap: 8px;
+                margin-bottom: 32px;
+            }
+
+            .theme-option {
+                padding: 12px 16px;
+                font-size: var(--text-sm);
             }
 
             .color-swatches {
-                gap: var(--space-xs);
+                gap: 12px;
+                margin-bottom: 32px;
             }
 
             .color-swatch {
-                width: var(--space-lg);
-                height: var(--space-lg);
+                width: 32px;
+                height: 32px;
+            }
+
+            /* Password Gate Mobile Optimization */
+            .password-content {
+                padding: 40px 24px;
+                max-width: 95%;
+            }
+
+            .password-title {
+                font-size: var(--text-3xl);
+                margin-bottom: 12px;
+            }
+
+            .password-subtitle {
+                font-size: var(--text-base);
+                margin-bottom: 32px;
+            }
+
+            .password-input {
+                padding: 16px 20px;
+                font-size: var(--text-base);
+            }
+
+            .password-submit {
+                padding: 16px 24px;
+                font-size: var(--text-base);
+            }
+
+            /* Mobile-Specific Improvements */
+            .main-container {
+                /* NEUTRALIZED: Mobile layout interference removed */
+            }
+
+            /* Ensure proper touch targets */
+            button, .nav-btn, .theme-option, .color-swatch {
+                min-height: 44px;
+                min-width: 44px;
+            }
+
+            /* Optimize code blocks for mobile */
+            .content-section code {
+                font-size: 0.85em;
+                padding: 3px 6px;
+                word-break: break-word;
+            }
+
+            /* Mobile scrolling improvements */
+            * {
+                -webkit-overflow-scrolling: touch;
             }
         }
 
