--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <title>Ageint Security DMSS Tutorial</title>
     <style>
         /* ===== CORE PHILOSOPHY: 8-POINT GRID SYSTEM & PREMIUM DESIGN ===== */
@@ -836,18 +836,32 @@
 
         /* ===== COMPREHENSIVE MOBILE OPTIMIZATION - NATIVE APP EXPERIENCE ===== */
         @media (max-width: 768px) {
-            /* TASK 1: RESPONSIVE WIZARD CARD - THE CORE FIX */
+            /* iOS Safari Viewport Fix - Use Fixed Pixel Heights */
+            html {
+                height: -webkit-fill-available;
+            }
+
+            body {
+                min-height: -webkit-fill-available;
+            }
+
+            /* TASK 1: RESPONSIVE WIZARD CARD - THE CORE FIX - iOS OPTIMIZED */
             #wizard-container {
                 width: 90vw !important;
                 max-width: 500px !important;
-                height: 85vh !important;
-                max-height: 700px !important;
+                height: 600px !important;
+                max-height: calc(100vh - 120px) !important;
+                min-height: 400px !important;
             }
 
             #wizard-container > section {
                 overflow-y: auto;
-                padding: 24px;
-                max-height: none;
+                padding: 20px;
+                max-height: calc(600px - 40px);
+                height: auto;
+                /* iOS-specific scrolling improvements */
+                -webkit-overflow-scrolling: touch;
+                overscroll-behavior: contain;
             }
 
             /* TASK 2: ADAPTIVE TYPOGRAPHY & SPACING - MOBILE-FIRST HIERARCHY */
@@ -1044,6 +1058,56 @@
             /* Mobile scrolling improvements */
             * {
                 -webkit-overflow-scrolling: touch;
+            }
+        }
+
+        /* ===== iOS SPECIFIC FIXES - ADDITIONAL VIEWPORT SUPPORT ===== */
+        @media (max-width: 480px) {
+            /* Extra small devices - more conservative sizing */
+            #wizard-container {
+                width: 95vw !important;
+                height: 500px !important;
+                max-height: calc(100vh - 100px) !important;
+                min-height: 350px !important;
+            }
+
+            #wizard-container > section {
+                padding: 16px;
+                max-height: calc(500px - 32px);
+            }
+
+            .content-section {
+                padding: 16px;
+                margin: 8px;
+            }
+
+            .hero-title {
+                font-size: var(--text-2xl);
+                margin-bottom: 12px;
+            }
+
+            .content-section h2 {
+                font-size: var(--text-xl);
+                margin-bottom: 12px;
+            }
+        }
+
+        /* ===== iOS SAFE AREA SUPPORT ===== */
+        @supports (padding: env(safe-area-inset-top)) {
+            .fixed-header {
+                padding-top: max(12px, env(safe-area-inset-top));
+            }
+
+            .wizard-navigation {
+                padding-bottom: max(16px, env(safe-area-inset-bottom));
+            }
+
+            #password-gate,
+            #welcome-modal {
+                padding-top: env(safe-area-inset-top);
+                padding-bottom: env(safe-area-inset-bottom);
+                padding-left: env(safe-area-inset-left);
+                padding-right: env(safe-area-inset-right);
             }
         }
 
