--- a/index.html
+++ b/index.html
@@ -834,88 +834,107 @@
             color: var(--group-box-text);
         }
 
-        /* ===== THE DEFINITIVE MOBILE LAYOUT - CLEAN FLEXBOX SOLUTION ===== */
+        /* ===== MOBILE UX OVERHAUL - PREDICTABLE LAYOUT & SCROLLING ===== */
         @media (max-width: 768px) {
             /* iOS Safari Viewport Fix */
             html {
                 height: -webkit-fill-available;
             }
 
-            /* THE NEW and ONLY layout for the body on mobile */
+            /* STEP 1: Calculate Fixed Element Heights */
+            /* Disclaimer bar: ~44px, Header: ~80px = Total: 124px */
+            
+            /* FUNDAMENTAL LAYOUT CHANGE: Flexbox + proper spacing for fixed elements */
             body {
+                min-height: -webkit-fill-available;
                 display: flex;
                 flex-direction: column;
-                height: 100vh; /* Make the body exactly the height of the screen */
                 margin: 0;
+                /* STEP 2: Apply padding-top to account for fixed elements */
+                padding-top: 124px; /* Disclaimer (44px) + Header (80px) */
             }
 
-            /* Style the fixed header and disclaimer */
-            #disclaimer-bar,
-            .fixed-header {
-                position: relative; /* No longer fixed to the viewport */
-                flex-shrink: 0; /* Prevents these from shrinking */
-                z-index: 10;
-            }
-
-            /* Remove fixed positioning conflicts */
+            /* Ensure disclaimer bar stays at very top */
             #disclaimer-bar {
-                position: relative;
-                top: auto;
-                padding: 12px 16px;
+                position: fixed;
+                top: 0;
+                height: 44px; /* Explicit height for calculation */
+                padding: 8px 16px;
                 font-size: 14px;
             }
 
+            /* Position header directly below disclaimer */
             .fixed-header {
-                position: relative;
-                top: auto;
+                position: fixed;
+                top: 44px; /* Height of disclaimer bar */
+                height: 80px; /* Explicit height for calculation */
                 padding: 16px;
-                background: var(--bg-primary);
-                border-bottom: 1px solid var(--border-gray);
             }
 
+            /* When disclaimer is hidden, adjust header position */
+            body.disclaimer-hidden {
+                padding-top: 80px; /* Only header height */
+            }
+
+            body.disclaimer-hidden .fixed-header {
+                top: 0;
+            }
+
+            /* Fixed Header Mobile Styles - Controlled by main fixed positioning */
             body.theme-dark .fixed-header {
-                background: var(--bg-primary);
+                background: rgba(26, 32, 44, 0.95);
             }
 
-            /* This is the container for the main wizard content area */
+            /* Main Content Area - Flexible Growth */
+            .main-container {
+                flex-grow: 1;
+                display: flex;
+                flex-direction: column;
+                overflow: hidden;
+            }
+
+            /* WIZARD CONTAINER - COMPLETE MOBILE REDESIGN */
             #wizard-container {
-                flex-grow: 1; /* This is the key: it grows to fill ALL remaining space */
-                position: relative; /* MUST be relative for the children to be positioned within it */
-                display: grid; /* We use a grid here to easily center the card */
-                place-items: center; /* This centers the card within the available space */
-                overflow: hidden; /* Prevents any weird overflow issues */
+                position: relative !important; /* Override fixed positioning */
+                top: auto !important;
+                left: auto !important;
+                transform: none !important;
+                width: 100% !important;
+                /* STEP 3: Account for all fixed elements - header + disclaimer + nav */
+                height: calc(100vh - 194px) !important; /* 124px (top) + 70px (nav) */
+                max-width: none !important;
+                max-height: none !important;
+                min-height: calc(100vh - 194px) !important;
+                display: flex;
+                flex-direction: column;
             }
 
-            /* The wizard card itself, now positioned relative to the container */
+            /* Adjust wizard height when disclaimer is hidden */
+            body.disclaimer-hidden #wizard-container {
+                height: calc(100vh - 150px) !important; /* 80px (header) + 70px (nav) */
+                min-height: calc(100vh - 150px) !important;
+            }
+
+            /* Individual Wizard Steps - Full Mobile Optimized */
             #wizard-container > section {
-                position: absolute;
-                /* The card should not be 100% height of the container, but a bit smaller to show padding */
-                width: 90%;
-                height: 90%;
-                max-width: 500px;
-                max-height: 600px;
-                /* The card flip animation and active state rules stay the same */
-                background: var(--bg-primary);
-                border-radius: 16px;
-                box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-                padding: 24px;
-                box-sizing: border-box;
+                position: relative;
+                width: 100%;
+                height: 100%;
                 overflow-y: auto;
                 overflow-x: hidden;
-                /* Keep existing transform animations */
-                transform: rotateY(-90deg);
-                transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+                padding: 16px;
+                box-sizing: border-box;
+                background: var(--bg-primary);
+                border-radius: 0; /* Remove border radius on mobile for full-screen feel */
+                box-shadow: none; /* Remove shadows on mobile for cleaner look */
             }
 
-            #wizard-container > section.active {
-                transform: rotateY(0deg);
+            /* Ensure scroll position resets happen at the slide level */
+            .wizard-step.active {
+                overflow-y: auto;
             }
 
-            #wizard-container > section.active-step {
-                transform: rotateY(0deg);
-            }
-
-            /* Mobile Typography - Optimized for smaller screens */
+            /* Mobile Typography - Significantly Smaller */
             #wizard-container h1 {
                 font-size: 24px;
                 margin-bottom: 16px;
@@ -956,6 +975,29 @@
                 font-size: 16px;
                 padding: 12px 20px;
                 border-radius: 8px;
+            }
+
+            /* Navigation Bar - Mobile Layout */
+            .wizard-navigation {
+                position: relative;
+                bottom: auto;
+                left: auto;
+                transform: none;
+                width: 100%;
+                padding: 16px;
+                background: var(--bg-primary);
+                border-top: 1px solid var(--border-gray);
+                flex-shrink: 0;
+            }
+
+            body.theme-dark .wizard-navigation {
+                background: var(--bg-primary);
+                border-top: 1px solid var(--border-gray);
+            }
+
+            /* Disable swipe navigation on mobile to prevent scrolling conflicts */
+            .wizard-step {
+                touch-action: pan-y; /* Only allow vertical scrolling */
             }
 
             /* TASK 2: ADAPTIVE TYPOGRAPHY & SPACING - MOBILE-FIRST HIERARCHY */
@@ -1067,19 +1109,20 @@
                 font-size: var(--text-xs);
             }
 
-            /* Navigation Bar - Clean positioning */
+            /* Navigation Bar - Mobile Fixed Bottom */
             .wizard-navigation {
-                position: relative;
-                flex-shrink: 0; /* Prevents navigation from shrinking */
-                width: 100%;
-                padding: 16px;
+                position: fixed !important;
+                bottom: 0 !important;
+                left: 0;
+                right: 0;
+                padding: 16px 12px;
                 background: var(--bg-primary);
                 border-top: 1px solid var(--border-gray);
+                z-index: 100;
             }
 
             body.theme-dark .wizard-navigation {
                 background: var(--bg-primary);
-                border-top: 1px solid var(--border-gray);
             }
 
             /* Height rules are handled in main wizard container section above */
@@ -1206,12 +1249,21 @@
             }
         }
 
-        /* Small Device Adjustments */
+        /* ===== iOS SPECIFIC FIXES - ADDITIONAL VIEWPORT SUPPORT ===== */
         @media (max-width: 480px) {
+            /* Extra small devices - more conservative sizing */
+            #wizard-container {
+                height: calc(100vh - 170px) !important; /* More conservative sizing */
+                min-height: calc(100vh - 170px) !important;
+            }
+
+            body.disclaimer-hidden #wizard-container {
+                height: calc(100vh - 130px) !important;
+                min-height: calc(100vh - 130px) !important;
+            }
+
             #wizard-container > section {
-                width: 95%;
-                height: 85%;
-                padding: 16px;
+                padding: 12px;
             }
 
             #wizard-container h1 {
