--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -847,51 +846,51 @@
             
             /* FUNDAMENTAL LAYOUT CHANGE: Flexbox + proper spacing for fixed elements */
             body {
-                min-height: -webkit-fill-available;
-                display: flex;
-                flex-direction: column;
-                margin: 0;
+                min-height: -webkit-fill-available !important;
+                display: flex !important;
+                flex-direction: column !important;
+                margin: 0 !important;
                 /* STEP 2: Apply padding-top to account for fixed elements */
-                padding-top: 124px; /* Disclaimer (44px) + Header (80px) */
+                padding-top: 124px !important; /* Disclaimer (44px) + Header (80px) */
             }
 
             /* Ensure disclaimer bar stays at very top */
             #disclaimer-bar {
-                position: fixed;
-                top: 0;
-                height: 44px; /* Explicit height for calculation */
-                padding: 8px 16px;
-                font-size: 14px;
+                position: fixed !important;
+                top: 0 !important;
+                height: 44px !important; /* Explicit height for calculation */
+                padding: 8px 16px !important;
+                font-size: 14px !important;
             }
 
             /* Position header directly below disclaimer */
             .fixed-header {
-                position: fixed;
-                top: 44px; /* Height of disclaimer bar */
-                height: 80px; /* Explicit height for calculation */
-                padding: 16px;
+                position: fixed !important;
+                top: 44px !important; /* Height of disclaimer bar */
+                height: 80px !important; /* Explicit height for calculation */
+                padding: 16px !important;
             }
 
             /* When disclaimer is hidden, adjust header position */
             body.disclaimer-hidden {
-                padding-top: 80px; /* Only header height */
+                padding-top: 80px !important; /* Only header height */
             }
 
             body.disclaimer-hidden .fixed-header {
-                top: 0;
+                top: 0 !important;
             }
 
             /* Fixed Header Mobile Styles - Controlled by main fixed positioning */
             body.theme-dark .fixed-header {
-                background: rgba(26, 32, 44, 0.95);
+                background: rgba(26, 32, 44, 0.95) !important;
             }
 
             /* Main Content Area - Flexible Growth */
             .main-container {
-                flex-grow: 1;
-                display: flex;
-                flex-direction: column;
-                overflow: hidden;
+                flex-grow: 1 !important;
+                display: flex !important;
+                flex-direction: column !important;
+                overflow: hidden !important;
             }
 
             /* WIZARD CONTAINER - COMPLETE MOBILE REDESIGN */
@@ -906,8 +905,9 @@
                 max-width: none !important;
                 max-height: none !important;
                 min-height: calc(100vh - 194px) !important;
-                display: flex;
-                flex-direction: column;
+                display: flex !important;
+                flex-direction: column !important;
+                perspective: none !important;
             }
 
             /* Adjust wizard height when disclaimer is hidden */
@@ -918,16 +918,28 @@
 
             /* Individual Wizard Steps - Full Mobile Optimized */
             #wizard-container > section {
-                position: relative;
-                width: 100%;
-                height: 100%;
-                overflow-y: auto;
-                overflow-x: hidden;
-                padding: 16px;
-                box-sizing: border-box;
-                background: var(--bg-primary);
-                border-radius: 0; /* Remove border radius on mobile for full-screen feel */
-                box-shadow: none; /* Remove shadows on mobile for cleaner look */
+                position: relative !important;
+                top: auto !important;
+                left: auto !important;
+                transform: none !important;
+                width: 100% !important;
+                height: 100% !important;
+                max-width: none !important;
+                max-height: none !important;
+                overflow-y: auto !important;
+                overflow-x: hidden !important;
+                padding: 16px !important;
+                box-sizing: border-box !important;
+                background: var(--bg-primary) !important;
+                border-radius: 0 !important; /* Remove border radius on mobile for full-screen feel */
+                box-shadow: none !important; /* Remove shadows on mobile for cleaner look */
+                opacity: 1 !important;
+                visibility: visible !important;
+                pointer-events: auto !important;
+                display: flex !important;
+                flex-direction: column !important;
+                justify-content: flex-start !important;
+                align-items: stretch !important;
             }
 
             /* Ensure scroll position resets happen at the slide level */
@@ -1114,12 +1126,13 @@
             .wizard-navigation {
                 position: fixed !important;
                 bottom: 0 !important;
-                left: 0;
-                right: 0;
-                padding: 16px 12px;
-                background: var(--bg-primary);
-                border-top: 1px solid var(--border-gray);
-                z-index: 100;
+                left: 0 !important;
+                right: 0 !important;
+                padding: 16px 12px !important;
+                background: var(--bg-primary) !important;
+                border-top: 1px solid var(--border-gray) !important;
+                z-index: 100 !important;
+                transform: none !important;
             }
 
             body.theme-dark .wizard-navigation {
